syntax = "proto3";

// Package Transmit is utilized for direct data transmission between two peers.
package sonrio.motor.service.v1;
import "common/v1/info.proto";

// For Transfer File Payload
message FileItem {
  common.v1.MIME mime = 1; // Standard Mime Type
  string name = 2;         // File Name without Path
  string path = 3;         // File Location
  int64 size = 4;          // File Size in Bytes
  Thumbnail thumbnail = 5; // Thumbnail of File
  int64 last_modified = 6;  // Last Modified Time in Seconds
}

// Payload is Data thats being Passed
message Payload {
  repeated Item items = 1; // Payload Items
  common.v1.Peer owner = 2;       // PROFILE: General Sender Info
  int64 size = 3;          // Payload Size in Bytes
  int64 created_at = 4;     // Payload Creation Time in Seconds

  // Item in Payload
  message Item {
    common.v1.MIME mime = 1;  // MIME of the Item
    int64 size = 2; // Size of the Item in Bytes

    // Attached Data
    oneof data {
      FileItem file = 3;       // FILE: File Item
      string url = 4;         // URL: Url Item
      string message = 5; // MESSAGE: Message Item
    }

    // Thumbnail of the Item
    Thumbnail thumbnail = 6;         // Thumbnail of the Item
  }
}

// SupplyItem is an item supplied to be a payload
message SupplyItem {
    string path = 1; // Supply Path
    optional bytes thumbnail = 2; // Supply Path of the Thumbnail
}

// Thumbnail of File
message Thumbnail {
  bytes buffer = 1; // Thumbnail Buffer
  common.v1.MIME mime = 2;    // Mime Type
}


message Session {
  common.v1.Direction direction = 1;
  common.v1.Peer from = 2;
  common.v1.Peer to = 3;
  Payload payload = 4;
  int64 last_updated = 5;
  repeated SessionItem items = 6;
  int32 current_index = 7;
  map<int32, bool> results = 8;
}

message SessionItem {
  int32 index = 1;
  int32 count = 2;
  FileItem item = 3;
  int64 written = 4;
  int64 size = 5;
  int64 total_size = 6;
  common.v1.Direction direction = 7;
  string path = 8;
}

message SessionPayload {
  Payload payload = 1;
  common.v1.Direction direction = 2;
}
